--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "server_real_estate_hackathon",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +24,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
