--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">= 0.8.14"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hamzaamir538/server_real_estate_hackathon.git"
